Added strings for authors, descriptions, and conflicts

--- a/lang/en.json
+++ b/lang/en.json
@@ -7,7 +7,13 @@
 				"readme": "Module Instructions",
 				"bugs": "Report Bugs & Issues"
 			},
-			"packageDescription": "Module Description"
+			"author": {
+				"single": "Author",
+				"plural": "Authors",
+				"conjunction": "and "
+			},
+			"packageDescription": "Module Description",
+			"conflicts": "Conflicts"
 		}
 	}
 }
